# Desafios-Projetos

Meus Projetos/: README.md
Meus Projetos/Agente IA Inteligente/: .gitignore
Meus Projetos/Agente IA Inteligente/Agent_Stride_Vision/: .gitignore  README.md  docker-compose.yml
Meus Projetos/Agente IA Inteligente/AgentsV/: README.md  main.py  system_check.py
Meus Projetos/Agente IA Inteligente/EcoTrip/: README.md  index.html
Meus Projetos/Agente IA Inteligente/copiloto-fys/: engine.py
Meus Projetos/Assistente Virtual com PLN/: .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Meus Projetos/Assistente Virtual com PLN/.github/workflows/: ci.yml
Meus Projetos/Assistente Virtual com PLN/docker/: Dockerfile  docker-compose.yml
Meus Projetos/Assistente Virtual com PLN/docs/: ARCHITECTURE.md
Meus Projetos/Assistente Virtual com PLN/src/virtual_assistant/: __init__.py  config.py
Meus Projetos/Assistente Virtual com PLN/src/virtual_assistant/commands/: base.py  joke.py  pharmacy_locator.py  router.py  wikipedia_search.py  youtube_search.py
Meus Projetos/Assistente Virtual com PLN/src/virtual_assistant/core/: assistant.py
Meus Projetos/Assistente Virtual com PLN/src/virtual_assistant/stt/: speech_to_text.py
Meus Projetos/Assistente Virtual com PLN/src/virtual_assistant/tts/: text_to_speech.py
Meus Projetos/Assistente Virtual com PLN/src/virtual_assistant/utils/: logger.py
Meus Projetos/Assistente Virtual com PLN/tests/: __init__.py  test_commands.py  test_stt.py  test_tts.py
Meus Projetos/Assistente_Delivery/: README.md
Meus Projetos/Assistente_Delivery/diagramas/: arquitetura.md
Meus Projetos/Assistente_Delivery/infra/: template.yaml
Meus Projetos/Assistente_Delivery/lambdas/: analisar_sentimento_hf.py  api_iniciar_pedido.py  capturar_feedback.py  enviar_push.py  gerar_mensagem.py  notificar_admin.py  validar_pedido.py
Meus Projetos/Cloud/AWS/: README.md
Meus Projetos/Engenharia de Prompt/: README.md
Meus Projetos/Excel/: README.md  Simulador de Investimentos em FIIs.xlsx
Meus Projetos/Face Detector Human com SSD/: .gitinore.GITIGNORE  README.md  main.py  pyproject.toml  requirements.txt
Meus Projetos/Face Detector Human com SSD/scripts/: download_model.py
Meus Projetos/Face Detector Human com SSD/src/: __init__.py  detector.py  image_utils.py  logger_config.py
Meus Projetos/Face Detector Human com SSD/tests/: Test_Detector.py  Test_Image_Utils.py
Meus Projetos/Image Auditor Project/: README.md  pyproject.toml  requirements.txt  test_run.py
Meus Projetos/Image Auditor Project/Image_Auditor/: __init__.py
Meus Projetos/Image Auditor Project/Image_Auditor.egg-info/: PKG-INFO  SOURCES.txt
Meus Projetos/Image Auditor Project/Image_Auditor/metrics/: analyzer.py
Meus Projetos/Image Auditor Project/Image_Auditor/processing/: transformer.py
Meus Projetos/Image Auditor Project/Image_Auditor/utils/: io.py  plot.py
Meus Projetos/Langchain-Test-Generator/: .env.example  README.md  pyproject.toml  requirements.txt
Meus Projetos/Langchain-Test-Generator/docs/: ARCHITECTURE.md
Meus Projetos/Langchain-Test-Generator/examples/: calculadora.py  validador_cpf.py
Meus Projetos/Langchain-Test-Generator/notebooks/: LangChain_Test_Generator_Colab.ipynb
Meus Projetos/Langchain-Test-Generator/src/: agent.py  chains.py  cli.py  config.py  llm_provider.py  logger_setup.py  prompts.py  tools.py
Meus Projetos/Langchain-Test-Generator/tests/: test_calculadora.py  test_validador_cpf.py
Meus Projetos/NotebookLM/: The Principles of Value Investing.ipynb
Meus Projetos/copiloto-fys/: README.md  copiloto_cli.py
Meus Projetos/face_recognition/: .gitignore.GITIGNORE  README.md  pyproject.toml  recognize.py  recognize_webcam.py  requirements.txt  train.py
Meus Projetos/face_recognition/models/: class_names.json  training_meta.json
Meus Projetos/face_recognition/scripts/: capture_faces.py  download_assets.py
Meus Projetos/face_recognition/src/: __init__.py  classifier.py  detector.py  image_utils.py  logger_config.py
Meus Projetos/face_recognition/tests/: test_classifier.py  test_detector.py  test_image_utils.py
Meus Projetos/image-recommendation-system/: .gitignore  README.md  requirements.txt
Meus Projetos/workflows/: ci-agent-stride-vision.yml
Meus Projetos/yolo_detector/: .gitignore  README.md  detect.py  detect_webcam.py  pyproject.toml  requirements.txt
Meus Projetos/yolo_detector/scripts/: download_sample_images.py
Meus Projetos/yolo_detector/src/: __init__.py  detector.py  image_utils.py  logger_config.py  visualizer.py
Meus Projetos/yolo_detector/tests/: test_detector.py  test_image_utils.py  test_visualizer.py
(+159 files in other folders)
