[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Image_Auditor"
version = "0.1.1"
authors = [
  { name="Seu Nome", email="seu.email@exemplo.com" },
]
description = "Um pacote profissional para auditoria, validação e otimização de imagens para web."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=10.0.0",
    "matplotlib>=3.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skynet_image_auditor*"]