[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-test-generator"
version = "0.1.0"
description = "Agente que gera testes unitários pytest usando LangChain + Azure OpenAI/Gemini"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Seu Nome" }]
dependencies = [
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-openai>=0.2.9",
    "langchain-google-genai>=2.0.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[project.scripts]
gerar-testes = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
